Bug 12686 - Samba doesn't build with newer glibc
Summary: Samba doesn't build with newer glibc
Status: RESOLVED FIXED
Alias: None
Product: Samba 4.1 and newer
Classification: Unclassified
Component: Build (show other bugs)
Version: 4.6.0rc4
Hardware: All All
: P5 normal (vote)
Target Milestone: ---
Assignee: Karolin Seeger
QA Contact: Samba QA Contact
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-03-14 09:55 UTC by Andreas Schneider
Modified: 2017-03-23 11:26 UTC (History)
2 users (show)

See Also:


Attachments
patch for 4.6, 4.5 and 4.4 (1018 bytes, patch)
2017-03-14 09:56 UTC, Andreas Schneider
metze: review+
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Andreas Schneider 2017-03-14 09:55:51 UTC
In the GNU C Library, "makedev" is defined by <sys/sysmacros.h>. For    historical compatibility, it is currently defined by <sys/types.h> as well, but it is planned to remove this soon.
Comment 1 Andreas Schneider 2017-03-14 09:56:40 UTC
Created attachment 13053 [details]
patch for 4.6, 4.5 and 4.4
Comment 2 Karolin Seeger 2017-03-14 11:16:10 UTC
(In reply to Andreas Schneider from comment #1)
Pushed to autobuild-v4-{6,5,4}-test.
Comment 3 Karolin Seeger 2017-03-23 11:26:12 UTC
(In reply to Karolin Seeger from comment #2)
Pushed to all branches.
Closing out bug report.

Thanks!